--- a/CollectionViewTask/Base.lproj/Main.storyboard
+++ b/CollectionViewTask/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -28,25 +29,41 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fRQ-Br-diu" userLabel="ContentView">
-                                <rect key="frame" x="0.0" y="108" width="414" height="754"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="596-mh-AoF">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            </view>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Axn-g5-Umg">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="pL5-T3-WKQ">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="UGc-Gr-YsE">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Qww-lt-huN"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Qww-lt-huN" firstAttribute="bottom" secondItem="fRQ-Br-diu" secondAttribute="bottom" id="4Ba-7R-cnv"/>
+                            <constraint firstItem="596-mh-AoF" firstAttribute="leading" secondItem="Qww-lt-huN" secondAttribute="leading" id="3mQ-X9-T73"/>
                             <constraint firstItem="evn-yC-UjP" firstAttribute="leading" secondItem="Qww-lt-huN" secondAttribute="leading" id="7bc-W3-dgT"/>
+                            <constraint firstItem="Qww-lt-huN" firstAttribute="trailing" secondItem="596-mh-AoF" secondAttribute="trailing" id="8bN-1W-QEE"/>
                             <constraint firstItem="evn-yC-UjP" firstAttribute="top" secondItem="Qww-lt-huN" secondAttribute="top" id="Bas-yv-woZ"/>
+                            <constraint firstItem="Qww-lt-huN" firstAttribute="bottom" secondItem="596-mh-AoF" secondAttribute="bottom" id="DqE-tP-qfw"/>
                             <constraint firstItem="evn-yC-UjP" firstAttribute="trailing" secondItem="Qww-lt-huN" secondAttribute="trailing" id="FSF-SQ-TC0"/>
-                            <constraint firstItem="fRQ-Br-diu" firstAttribute="leading" secondItem="Qww-lt-huN" secondAttribute="leading" id="VoW-ai-DiZ"/>
-                            <constraint firstItem="fRQ-Br-diu" firstAttribute="top" secondItem="evn-yC-UjP" secondAttribute="bottom" constant="20" id="bbO-ZA-iAt"/>
-                            <constraint firstItem="Qww-lt-huN" firstAttribute="trailing" secondItem="fRQ-Br-diu" secondAttribute="trailing" id="jcu-gL-28h"/>
+                            <constraint firstItem="596-mh-AoF" firstAttribute="top" secondItem="evn-yC-UjP" secondAttribute="bottom" id="fxj-z9-gjp"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="contentView" destination="fRQ-Br-diu" id="h7h-Qw-Wok"/>
+                        <outlet property="collectionView" destination="596-mh-AoF" id="KrB-Kl-Enx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ATE-IH-EFY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
